# data-canary

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data_canary/: app.py  config.py
data_canary/check/: basic.py  llm_naming.py  llm_types.py  schema.py
data_canary/core/: basic_profiler.py  contract_builder.py  export.py
data_canary/llm/: base.py  naming_checking.py  prompts.py  type_checking.py
data_canary/schemas/: data_models.py
docs/: agent-usage-guide.md  architecture.md  changelog.md  decision-records.md  development-guide.md  project-spec.md  project-status.md
tests/: __init__.py  test_contract_builder.py  test_data_models.py  test_export.py
