[project]
name = "data-canary"
version = "0.0.1"
description = "AI-powered data quality copilot – finds everything wrong with your data in plain English"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Jonathan Lam", email = "lamheihung@gmail.com"}
]

dependencies = [
    "streamlit>=1.38",
    "pandas",
    "polars",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "openai>=1.0"
]

[project.optional-dependencies]
dev = [
    "ruff",      
    "black",     
    "mypy",     
    "pytest",
    "bandit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true